welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:24: error: expected class or object definition
def brosse(){
^MethodsPicture:28: error: expected class or object definition
def faireV(c:Color){
^MethodsPicture:44: error: Unmatched closing brace '}' ignored here
}
^